--- a/FileConverterCZ/packages.config
+++ b/FileConverterCZ/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EPPlus" version="6.0.4" targetFramework="net46" />
+  <package id="DynamicLanguageRuntime" version="1.3.1" targetFramework="net46" />
   <package id="EPPlus.Interfaces" version="6.0.0" targetFramework="net46" />
   <package id="EPPlus.System.Drawing" version="6.0.0" targetFramework="net46" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net46" />
